# ace

./: .dockerignore  .gitignore  Makefile  README.md  ace.code-workspace  config.py  docker-compose.override.yml  docker-compose.yml  initial_data.py  main.py  pyproject.toml  tg_bot.db
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 02d8ce5fd8e4_added_from_and_to_age_in_category_model.py  051c9da13ee4_added_tournament_type_column.py  05d6699fde25_solid.py  083382e2d2e9_added_group_tables.py  08cd6ea13e84_added_rows_in_user_model.py  09afbf3683fd_added_transaction_model.py  2364a24658a2_migrations.py  (+43 more)
backend/: Dockerfile  Dockerfile.migrations  pyproject.toml  requirements.txt
backend/app/: crud.py  main.py  payment.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: categories.py  groups.py  healthcheck.py  login.py  max_registration.py  news.py  participants.py  photos.py  playoff.py  regions.py  sex.py  tournaments.py  trainers.py  transactions.py  uploads.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: comment.py  group_match.py  group_participant.py  group_stage.py  news.py  participant.py  tournament.py  trainer.py  transaction.py  user.py
backend/app/messaging/: consumer.py  producer.py
backend/app/utils/: max_registration.py  rabbitmq.py  utils.py
bot/: Dockerfile  bot.py  config.py  dispatcher.py  initial_data.py  main.py  pyproject.toml  requirements.txt  settings.py
bot/handlers/: __init__.py  admin.py  confirmation.py  filters.py  markups.py  states.py  user.py
bot/messaging/: consumer.py  producer.py
bot/utils/: rabbitmq.py  redis.py  tasks.py  utils.py
common/: schemas.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  nginx.development.conf  nginx.production.conf  package-lock.json  package.json  vite.config.ts
handlers/: admin.py  markups.py  states.py  user.py
maxbot/: Dockerfile  README.md  __init__.py  backend_client.py  handlers.py  main.py  max_client.py  pyproject.toml  requirements.txt  settings.py  setup_webhook.py  update_parser.py
models/: databases.py
utils/: payments.py  tasks.py
(+192 files in other folders)
