[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiogram>=3.17.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "jwt>=1.3.1",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
