[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "alembic>=1.14.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.8",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "pika>=1.3.2",
    "aio-pika>=9.5.5",
]
