[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "aiogram>=3.13.1",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "pika>=1.3.2",
    "aio-pika>=9.5.5",
    "watchfiles>=1.0.4",
    "setuptools>=76.0.0",
    "redis>=5.2.1",
]
